[project]
name = "evals"
version = "1.0.3.post1"
requires-python = ">=3.9"
dependencies = [
    "mypy==1.5.1",
    "openai==0.28.0",
    "tiktoken==0.5.1",
    "blobfile==2.0.2",
    "backoff==2.2.1",
    "numpy==1.26.0",
    "snowflake-connector-python[pandas]==3.2.0",
    "pandas==2.0.3",
    "datasets",
    "fire==0.5.0",
    "pydantic==2.3.0",
    "tqdm==4.66.1",
    "nltk==3.8.1",
    "filelock==3.12.4",
    "mock==5.1.0",
    "langdetect==1.0.9",
    "termcolor==2.3.0",
    "lz4==4.3.2",
    "pyzstd==0.15.9",
    "pyyaml==6.0.1",
    "sacrebleu==2.3.1",
    "matplotlib==3.8.0",
    "pytest",
    "setuptools_scm==8.0.3",
    "langchain",
    "types-PyYAML",
    "jiwer",
]

[project.optional-dependencies]
formatters = [
    "black",
    "isort",
    "autoflake"
]

[project.scripts]
oaieval = "evals.cli.oaieval:main"
oaievalset = "evals.cli.oaievalset:main"

[tool.setuptools]
packages = ["evals"]
